change theme/colors (copying/using assets from the opensource BlurAdmin website template), remove timestamp from activity, implement widget section css

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <!-- Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lora:wght@600&family=Merriweather&family=Inconsolata&display=swap"
-    rel="stylesheet">
-  <!-- Material UI Font/Icons -->
+  <!-- Material UI Font/Icons; Roboto is required for Material UI but it is also the primary font for our app -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <!-- Boilerplate -->
