add gh-pages dependency to client, switch to hash routing to be compatible with github pages' static hosting, make various minor tweaks to prep for deployment, add appsettings copy.json as example for readme build instructions

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,13 +6,14 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description"
+    content="A mobile-first issue management app that features cookie-based authentication, an authorization hierarchy, and more!" />
   <!-- Material UI Font/Icons; Roboto is required for Material UI but it is also the primary font for our app -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <!-- Boilerplate -->
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="icon" href="%PUBLIC_URL%/logo.svg" sizes="any" type="image/svg+xml">
   <title>Bug Tracker</title>
 </head>
 
