update tech stack section and add more sections to readme, update site desc in index.html

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
-    content="A mobile-first issue management app that features cookie-based authentication, an authorization hierarchy, and more!" />
+    content="A mobile-first Issue management CRUD app with authentication, authorization, and more! Made by Japraj Sandhu" />
   <!-- Material UI Font/Icons; Roboto is required for Material UI but it is also the primary font for our app -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
